--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,8 @@
   <div id="mocha"></div>
 </body>
   <script type="text/javascript" src="lib/mocha/mocha.js"></script>
+  <script type="text/javascript" src="lib/chai.js"></script>
+  <script type="text/javascript" src="lib/sinon-chai.js"></script>
   <script type="text/javascript" src="lib/sinon.js"></script>
 
   <script type="text/javascript" src="config.js"></script>
