Renames test specification files.

--- a/test/index.html
+++ b/test/index.html
@@ -19,8 +19,8 @@
 
   <script type="text/javascript">
     require([
-      'spec/test.smoketest',
-      'spec/test.app'
+      'spec/smoketest',
+      'spec/app.spec'
       ], runMocha);
   </script>
 </html>
